# Robot-Visual-Grasping-and-Control-System

./: README.md
robot_taike10/: CMakeLists.txt  README.md  amc_taike.cpp  model_scara.txt  robot_taike10.code-workspace  taike_model.txt  test_plan.txt  ur_model.txt  zhiling.txt
robot_taike10/EG2_close_open/: Makefile  close_open  serialPort.cpp  serialPort.hpp  serialTest.cpp
robot_taike10/config/: FindXenomai.cmake
robot_taike10/control/: CMakeLists.txt  control.hpp  controller_motion.cpp  controller_motion.hpp  ethercat.cpp  ethercat.hpp  ethercat_kernel.cpp  ethercat_kernel.hpp  master_slave.cpp  master_slave.hpp  rt_timer.cpp  rt_timer.hpp
robot_taike10/core/: CMakeLists.txt  basic_type.cpp  basic_type.hpp  command.cpp  command.hpp  core.hpp  expression_calculator.cpp  expression_calculator.hpp  log.cpp  log.hpp  msg.cpp  msg.hpp  object.cpp  object.hpp  pipe.cpp  pipe.hpp  sha1.cpp  socket.cpp  socket.hpp  tinyxml2.cpp  tinyxml2.h
robot_taike10/dynamic/: CMakeLists.txt  dynamic.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  model_basic.cpp  model_basic.hpp  model_coordinate.cpp  model_coordinate.hpp  model_interaction.cpp  model_interaction.hpp  model_simulation.cpp  model_simulation.hpp  model_solver.cpp  model_solver.hpp  plan.cpp  plan.hpp  puma.cpp  puma.hpp  screw.cpp  screw.hpp  spline.cpp  spline.hpp  stewart.cpp  stewart.hpp  taike.cpp  taike.hpp  ur.cpp  ur.hpp
robot_taike10/plan/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  function.cpp  function.hpp  plan.hpp  root.cpp  root.hpp  serialPort.cpp  serialPort.hpp
robot_taike10/resource/: Taike_Controller.xml  Taike_Master_Slave.xml  Taike_Model.xml  Taike_Server.xml  command.xml  ground.xmt_txt  joint1.xmt_txt  joint2.xmt_txt  joint3.xmt_txt  joint4.xmt_txt  joint5.xmt_txt  (+1 more)
(+35 files in other folders)
